--- a/repository/impl/pom.xml
+++ b/repository/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>repository-parent</artifactId>
     <groupId>ar.com.zauber.commons.repository</groupId>
-    <version>2.10</version>
+    <version>2.11-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Repository::Implementations</name>
   <artifactId>impl-repository-parent</artifactId>
