--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
         <artifactId>commons-auth-api</artifactId>
         <version>${pom.version}</version>
      </dependency>
+     <dependency>
+        <groupId>ar.com.zauber.commons.auth</groupId>
+        <artifactId>commons-auth-impl</artifactId>
+        <version>${pom.version}</version>
+     </dependency>
     <dependency>
       <groupId>ar.com.zauber.commons.repository</groupId>
       <artifactId>commons-repository-api</artifactId>
