--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>2.11-SNAPSHOT</version>
+  <version>2.11</version>
   <packaging>pom</packaging>
 
   <scm>
-     <connection>scm:svn:https://svn.zauber.com.ar/private/zauber/sandbox/zaubercommons/trunk/</connection>
-     <developerConnection>scm:svn:https://svn.zauber.com.ar/private/zauber/sandbox/zaubercommons/trunk/</developerConnection>
-     <url>https://svn.zauber.com.ar/private/zauber/sandbox/zaubercommons/trunk/</url>
+     <connection>scm:svn:https://svn.zauber.com.ar/private/zauber/sandbox/zaubercommons/releases/zauber-commons-parent-2.11</connection>
+     <developerConnection>scm:svn:https://svn.zauber.com.ar/private/zauber/sandbox/zaubercommons/releases/zauber-commons-parent-2.11</developerConnection>
+     <url>https://svn.zauber.com.ar/private/zauber/sandbox/zaubercommons/releases/zauber-commons-parent-2.11</url>
   </scm>
 
   <repositories>
