Se empieza a armar un Zauber Commons Facebook (viene de lo hecho en flof y de lo que estamos haciendo ahora para MO Clarin).
TODO: Hacer que geotag-web dependa de este nuevo componente.

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
      <module>jetty-launcher</module>
      <module>repository</module>
      <module>exception</module>
+     <module>facebook</module>
   </modules>
   <dependencies>
     <dependency>
