--- a/repository/impl/spring-hbm/src/test/resources/repository-impl-springhbm.properties
+++ b/repository/impl/spring-hbm/src/test/resources/repository-impl-springhbm.properties
@@ -1,3 +1,7 @@
+#
+#  Copyright (c) 2005-2008 Zauber -- All rights reserved
+#
+
 # STO Database
 dataSource.url=${repository-impl-springhbm.dataSource.url}
 dataSource.driverClassName=${repository-impl-springhbm.dataSource.driverClassName}
