--- a/spring/src/test/resources/log4j.properties
+++ b/spring/src/test/resources/log4j.properties
@@ -1,3 +1,7 @@
+#
+#  Copyright (c) 2005-2008 Zauber -- All rights reserved
+#
+
 # Setea el nivel de rootLogger a INFO y un Appender llamado FooApender.
 log4j.rootLogger=INFO, ConsoleApender
 
