--- a/repository/impl/spring-hbm/src/test/resources/log4j.properties
+++ b/repository/impl/spring-hbm/src/test/resources/log4j.properties
@@ -1,3 +1,7 @@
+#
+#  Copyright (c) 2005-2008 Zauber -- All rights reserved
+#
+
 log4j.rootLogger=${repository-impl-springhbm.log4j.debugLevel}, ${repository-impl-springhbm.log4j.appender}
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
