--- a/facebook/pom.xml
+++ b/facebook/pom.xml
@@ -3,13 +3,13 @@
  <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-      <version>2.11-SNAPSHOT</version>
+      <version>2.11</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>commons-facebook</artifactId>
   <packaging>jar</packaging>
-  <version>2.11-SNAPSHOT</version>
+
   <name>Zauber::Commons::Facebook</name>
   <url>http://maven.apache.org</url>
   <dependencies>
