--- a/auth/api/pom.xml
+++ b/auth/api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.auth</groupId>
-    <version>2.11</version>
+    <version>2.12-SNAPSHOT</version>
   </parent>
   <artifactId>commons-auth-api</artifactId>
   <packaging>jar</packaging>
