--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>2.11</version>
+  <version>2.12-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <scm>
