--- a/clustering/pom.xml
+++ b/clustering/pom.xml
@@ -3,7 +3,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>2.12-SNAPSHOT</version>
+     <version>2.12</version>
   </parent>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>commons-clustering</artifactId>
