* convierto zauber commons a spring 2.5.x    * convierto acegi a spring-security    * la proxima versiÃ³n no va a ser 2.14 sino 3.0! (estos cambios la hace      bastante incompatible con la 2.13. mejor cambiar el numero...)    * reorganizo algunas dependencias que estÃ¡ban de mÃ¡s.

--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.auth</groupId>
-    <version>2.13-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Auth::Implementation</name>
   <artifactId>commons-auth-impl</artifactId>
@@ -21,27 +21,15 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
- 
-   <dependency>
-      <groupId>org.acegisecurity</groupId>
-      <artifactId>acegi-security</artifactId>
-      <version>1.0.3</version>
-    </dependency>
-    <!-- sobreescribo las dependencias de acegi  -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-remoting</artifactId>
+     <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-support</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-   <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>servlet-api</artifactId>
        <version>2.4</version>
