--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -3,10 +3,16 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>2.13-SNAPSHOT</version>
+     <version>3.0-SNAPSHOT</version>
   </parent>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>commons-dao</artifactId>
   <packaging>jar</packaging>
   <name>Zauber::Commons::DAO</name>
+  <dependencies>
+    <dependency>
+       <artifactId>commons-lang</artifactId>
+       <groupId>commons-lang</groupId>
+    </dependency>
+  </dependencies>
 </project>
