--- a/facebook/pom.xml
+++ b/facebook/pom.xml
@@ -3,7 +3,7 @@
  <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-      <version>2.13-SNAPSHOT</version>
+      <version>3.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
   <groupId>ar.com.zauber.commons</groupId>
@@ -14,6 +14,10 @@
   <url>http://maven.apache.org</url>
   <dependencies>
       <dependency>
+          <groupId>commons-lang</groupId>
+          <artifactId>commons-lang</artifactId>
+      </dependency>
+      <dependency>
           <groupId>com.facebook.api</groupId>
           <artifactId>facebook-java-api</artifactId>
           <version>1.7.1-rev141</version>
@@ -23,5 +27,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>servlet-api</artifactId>
+         <version>2.4</version>
+         <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 </project>
