--- a/image/impl/pom.xml
+++ b/image/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.image</groupId>
-    <version>2.13-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Image:Implementation</name>
   <artifactId>commons-image-impl</artifactId>
@@ -12,6 +12,10 @@
     <dependency>
         <groupId>ar.com.zauber.commons.image</groupId>
         <artifactId>commons-image-api</artifactId> 
+    </dependency>
+    <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId> 
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
