--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.message</groupId>
-    <version>2.13-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Message::Implementation</name>
   <modelVersion>4.0.0</modelVersion>
@@ -16,7 +16,6 @@
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
-      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -36,12 +35,12 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-support</artifactId>
+      <artifactId>spring-context-support</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
-      <version>1.3.2</version>
+      <version>1.4</version>
     </dependency>
     <dependency>
       <groupId>velocity</groupId>
