--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>2.13-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <scm>
@@ -51,13 +51,7 @@
      <module>exception</module>
      <module>facebook</module>
   </modules>
-  <dependencies>
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.2</version>
-    </dependency>
-  </dependencies>
+  
   <build>
    <plugins>
      <plugin>
@@ -146,10 +140,16 @@
     </plugins>
   </build>
   <properties>
-      <spring.version>2.0.6</spring.version>
+      <spring.version>2.5.4</spring.version>
+      <jetty.version>6.1.9</jetty.version>
   </properties>
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.4</version>
+      </dependency>
       <dependency>
         <groupId>ar.com.zauber.commons.auth</groupId>
         <artifactId>commons-auth-api</artifactId>
@@ -194,10 +194,33 @@
      <!-- spring -->
      <dependency>
         <groupId>org.springframework</groupId>
-        <artifactId>spring-mock</artifactId>
+        <artifactId>spring-test</artifactId>
         <version>${spring.version}</version>
         <scope>test</scope>
      </dependency>
+     <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>2.0.1</version>
+      <exclusions>
+        <exclusion>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-support</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+      <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core-tiger</artifactId>
+      <version>2.0.1</version>
+      <exclusions>
+        <exclusion>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-support</artifactId>
+        </exclusion>
+       </exclusions>
+    </dependency>
+
      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-beans</artifactId>
@@ -206,6 +229,11 @@
      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
         <version>${spring.version}</version>
      </dependency>
      <dependency>
@@ -230,7 +258,7 @@
      </dependency>
      <dependency>
         <groupId>org.springframework</groupId>
-        <artifactId>spring-support</artifactId>
+        <artifactId>spring-context-support</artifactId>
         <version>${spring.version}</version>
      </dependency>
      <dependency>
