--- a/syndication/pom.xml
+++ b/syndication/pom.xml
@@ -2,12 +2,17 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>2.13-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Syndication</name>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-syndication</artifactId>
   <dependencies>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+
     <dependency>
     	<groupId>rome</groupId>
 	<artifactId>rome</artifactId>
