--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
      <module>jetty-launcher</module>
      <module>repository</module>
      <module>exception</module>
-     <!-- module>facebook</module -->
+     <module>facebook</module>
   </modules>
   
   <build>
