--- a/doxia/pom.xml
+++ b/doxia/pom.xml
@@ -10,16 +10,27 @@
   <packaging>jar</packaging>
   <name>Zauber::Commons::Doxia</name>
 
+  <repositories>
+     <repository>
+      <id>apache.snapshots</id>
+      <name>Apache Development Snapshot Repository</name>
+      <url>http://people.apache.org/repo/m2-snapshot-repository</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-sink-api</artifactId>
-      <version>1.0-alpha-10</version>
+      <version>1.0-beta-1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-core</artifactId>
-      <version>1.0-alpha-10</version>
+      <version>1.0-beta-1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
 
