--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -24,11 +24,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>hibernate</groupId>
-      <artifactId>hibernate-annotations</artifactId>
-      <version>3.1beta4</version>
-    </dependency>
-    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>${spring.version}</version>
@@ -57,5 +52,10 @@
       <artifactId>commons-beanutils</artifactId>
       <version>1.7.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+    </dependency>
+
   </dependencies>
 </project>
