--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,7 @@
   </dependencies>
   <properties>
       <spring.version>2.5.5</spring.version>
+      <spring.security.version>2.0.3</spring.security.version>
       <hibernate.version>3.2.6.ga</hibernate.version>
       <hibernate.annotations.version>3.3.0.ga</hibernate.annotations.version>
       <doxia.version>1.0-beta-1-zauber-r669205</doxia.version>
@@ -233,18 +234,22 @@
      <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
-      <version>2.0.1</version>
+      <version>${spring.security.version}</version>
       <exclusions>
         <exclusion>
             <groupId>org.springframework</groupId>
             <artifactId>spring-support</artifactId>
+        </exclusion>
+        <exclusion>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
       <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core-tiger</artifactId>
-      <version>2.0.1</version>
+      <version>${spring.security.version}</version>
       <exclusions>
         <exclusion>
             <groupId>org.springframework</groupId>
