los log4j de los properties deben ser lo menos verborragico posibles por default. si falla algo esta el reporte del test para indagar

--- a/spring/src/test/resources/log4j.properties
+++ b/spring/src/test/resources/log4j.properties
@@ -15,7 +15,7 @@
 #
 
 # Setea el nivel de rootLogger a INFO y un Appender llamado FooApender.
-log4j.rootLogger=INFO, ConsoleApender
+log4j.rootLogger=error, ConsoleApender
 
 # del tipo ConsoleAppender (salida estandar).
 log4j.appender.ConsoleApender=org.apache.log4j.ConsoleAppender
