--- a/gis/src/test/java/log4j.properties
+++ b/gis/src/test/java/log4j.properties
@@ -2,7 +2,7 @@
 #  Copyright (c) 2005-2008 Zauber -- All rights reserved
 #
 
-log4j.rootLogger=info,stdout
+log4j.rootLogger=error,stdout
 # stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -11,4 +11,3 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.org.trails=debug
