los tests no deben imprimir cosas verborragicas en su salida por default

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
         <version>2.4</version>
       </dependency>
       <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.8</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
         <groupId>ar.com.zauber.commons.auth</groupId>
         <artifactId>commons-auth-api</artifactId>
         <version>${pom.version}</version>
