--- a/repository/impl/spring-hbm/pom.xml
+++ b/repository/impl/spring-hbm/pom.xml
@@ -84,6 +84,10 @@
       <version>1.0</version>      
     </dependency>
     <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+    </dependency>
+    <dependency>
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>1.8.0.7</version>
@@ -139,12 +143,12 @@
       <repository-impl-springhbm.dataSource.username>sa</repository-impl-springhbm.dataSource.username>
       <repository-impl-springhbm.dataSource.password />
 
-      <repository-impl-springhbm.log4j.debugLevel>info</repository-impl-springhbm.log4j.debugLevel>
+      <repository-impl-springhbm.log4j.debugLevel>error</repository-impl-springhbm.log4j.debugLevel>
       <repository-impl-springhbm.log4j.appender>console</repository-impl-springhbm.log4j.appender>
 
       <repository-impl-springhbm.hibernate.dialect>org.hibernate.dialect.HSQLDialect</repository-impl-springhbm.hibernate.dialect>
       <repository-impl-springhbm.hibernate.hbm2ddl.auto>create</repository-impl-springhbm.hibernate.hbm2ddl.auto>
-      <repository-impl-springhbm.hibernate.show_sql>true</repository-impl-springhbm.hibernate.show_sql>
+      <repository-impl-springhbm.hibernate.show_sql>false</repository-impl-springhbm.hibernate.show_sql>
       <repository-impl-springhbm.hibernate.default_schema>public</repository-impl-springhbm.hibernate.default_schema>
     </properties>
 </project>
