nUEVO MODULO COMMONS-WEB-UTIL.
Por ahora contiene un VersionProvider. La mision de VersionProvider es proveer la version del artefacto en cuestion en runtime. Esto es muy util a la hora de armar los links de contenido estatico (css, jsp) automaticamente. 

Se implementaron varias Implementaciones que se combinan (EmptyVersionProvider, InmutableVersionProvider, AppenderDecoratorVersionProvider, ValidatorVersionProvider. ManifestVersionProvider, FailsafeInputStreamManifestProvider, AppenderMultipleVersionProvider, MultipleVersionProvider, PropertiesVersionProvider) muy bien.


Se provee la configuraciÃ³n xml para que un proyecto web pueda usarlo sin configurar mucho:
   <import resource="classpath:ar/com/zauber/commons/web/utils/version-provider-spring.xml"/>
   <import resource="classpath:ar/com/zauber/commons/spring/web/utils/resource-version-provider-spring.xml"/>

O si no se tiene spring 
  <import resource="classpath:ar/com/zauber/commons/web/utils/version-provider-spring.xml"/>
  <import resource="classpath:ar/com/zauber/commons/web/utils/jar-version-provider-spring.xml"/>

Combinando todas las implementaciones provee una version intentando conseguir la mayor informacion:
   * Si hay informacion de version de pom y de build the hudson
   * Si estÃ¡ la version del pom y no el build va la version del pom
   * Si estÃ¡ la informacion del build pero no del pom va el build
   * sino usa de version la fecha en la que inicio la aplicaciÃ³n
   
  Siguiendo la linea anterios, estos son posibles ejemplos: 
   * 0.0-SNAPSHOT-build-25
   * 0.0-SNAPSHOT
   * build-25
   * 11B3D01DFE8

nunca mÃ¡s deberiamos cambiar a mano los links de los js y css para evitar problemas de cacheo de contenido estatico.
Hecho con TTD y super modular.

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
      <module>repository</module>
      <module>exception</module>
      <module>facebook</module>
+     <module>web</module>
   </modules>
   
   <build>
