--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -9,6 +9,16 @@
   <artifactId>commons-spring</artifactId>
   <dependencies>
     <dependency>
+      <groupId>ar.com.zauber.commons</groupId>
+      <artifactId>commons</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ar.com.zauber.commons.web</groupId>
+      <artifactId>commons-web-utils</artifactId>
+      <version>${pom.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
@@ -43,13 +53,14 @@
       <version>3.8.1</version>
     </dependency>
     <dependency>
-      <groupId>ar.com.zauber.commons</groupId>
-      <artifactId>commons</artifactId>
-    </dependency>
-    <dependency>
       <groupId>stax</groupId>
       <artifactId>stax</artifactId>
       <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <scope>test</scope>
     </dependency>
 
 
