Agrego el filtro de UTF-8 y uno para setear headers

--- a/web/utils/pom.xml
+++ b/web/utils/pom.xml
@@ -33,6 +33,11 @@
         <groupId>log4j</groupId>
         <scope>test</scope>
      </dependency>
+     <dependency>
+        <groupId>javax.servlet</groupId>
+       <artifactId>servlet-api</artifactId>
+       <scope>provided</scope>
+     </dependency>
 
 
   </dependencies>
