--- a/facebook/pom.xml
+++ b/facebook/pom.xml
@@ -20,7 +20,7 @@
       <dependency>
           <groupId>com.facebook.api</groupId>
           <artifactId>facebook-java-api</artifactId>
-          <version>1.7.1-rev141</version>
+          <version>1.8</version>
       </dependency>
       <dependency>
             <groupId>org.springframework</groupId>
