--- a/repository/impl/pom.xml
+++ b/repository/impl/pom.xml
@@ -11,6 +11,7 @@
   <packaging>pom</packaging>
   <modules>
   	<module>spring-hbm</module>
+  	<module>entities</module>
   </modules>
   <dependencies>
     <dependency>
