--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -19,6 +19,13 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>ar.com.zauber.commons.web</groupId>
+      <artifactId>commons-web-proxy</artifactId>
+      <version>${pom.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
