--- a/web/proxy/pom.xml
+++ b/web/proxy/pom.xml
@@ -14,6 +14,16 @@
         <groupId>commons-lang</groupId>
      </dependency>
      <dependency>
+        <artifactId>commons-io</artifactId>
+        <groupId>commons-io</groupId>
+        <version>1.4</version>
+     </dependency>
+     <dependency>
+        <artifactId>commons-httpclient</artifactId>
+        <groupId>commons-httpclient</groupId>
+        <version>3.1</version>
+     </dependency>
+     <dependency>
         <groupId>javax.servlet</groupId>
        <artifactId>servlet-api</artifactId>
        <scope>provided</scope>
