--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,16 @@
         <version>${spring.version}</version>
         <scope>test</scope>
      </dependency>
+	 <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
      <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
