--- a/repository/impl/entities/pom.xml
+++ b/repository/impl/entities/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>persistence-api</artifactId>
       <version>1.0</version>      
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-tx</artifactId>
+        <version>${spring.version}</version>
+        <optional>true</optional>
+    </dependency>
 
   </dependencies>
 </project>
